Thêm bảng khách hàng, tối ưu một số lỗi

--- a/FrmMixed/frmNhanVien.resx
+++ b/FrmMixed/frmNhanVien.resx
@@ -141,4 +141,81 @@
   <metadata name="ChucVu.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAPnRAAD50QAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAA
+        AAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAIAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAABAAAAAAAAAAoAAAC3AAAA4AAAAN4AAADfAAAA3wAAAN8AAADfAAAA3wAAAN8AAADfAAAA3wAA
+        AN8AAADfAAAA3gAAAOAAAACxAAAABQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAIAAAAAAAAAIgAAAP0AAAD4AAAA4gAAAOQAAADkAAAA5AAAAOQAAADkAAAA5AAA
+        AOQAAADkAAAA5AAAAOQAAADiAAAA+gAAAPgAAAAZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAAAAAAeAAAA/wAAAK0AAAAAAAAABAAAAAEAAAABAAAAAgAA
+        AAIAAAACAAAAAgAAAAEAAAABAAAAAwAAAAAAAAC4AAAA/wAAABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAAAAAB8AAAD/AAAArgAAAAAAAAADAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAAAAAAALoAAAD/AAAAFwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAQAAAAEAAAABAAAAAYAAAAAAAAAIgAAAP8AAACuAAAAAAAA
+        AAQAAAABAAAACgAAAAsAAAALAAAACwAAAAwAAAAEAAAAAAAAAAMAAAAAAAAAugAAAP8AAAAXAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAAAAAAeAAAA/wAA
+        AK4AAAAAAAAAAQAAAAcAAADYAAAA+wAAAPUAAAD0AAAA/wAAAFwAAAAAAAAABgAAAAAAAAC6AAAA/wAA
+        ABcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAAAAADwAAACZAAAAjQAAAI8AAACQAAAAjAAA
+        AJsAAAD/AAAArQAAAAAAAAADAAAAAgAAAEQAAABRAAAARQAAAD8AAABTAAAAHQAAAAAAAAAEAAAAAAAA
+        ALoAAAD/AAAAFwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAawAAAP8AAAD7AAAA/wAA
+        AP8AAAD/AAAA/AAAAP8AAACuAAAAAAAAAAYAAAADAAAAAQAAAAAAAAAfAAAANgAAAAAAAAADAAAABAAA
+        AAYAAAAAAAAAuwAAAP8AAAAXAAAAAAAAAAAAAAABAAAABAAAAAQAAAAEAAAABwAAAAAAAABpAAAA/wAA
+        APcAAAD7AAAA+wAAAPsAAAD4AAAA/wAAAK0AAAAAAAAAAwAAAAAAAAADAAAAAAAAALEAAAD/AAAAEgAA
+        AAAAAAABAAAAAwAAAAAAAAC5AAAA/wAAABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAA
+        AGoAAAD/AAAA+wAAAP8AAAD/AAAA/wAAAP4AAAD/AAAA5AAAAKcAAACsAAAAqwAAAK0AAACpAAAA5wAA
+        AP8AAAC1AAAAqgAAAK0AAACtAAAAqAAAAOoAAAD8AAAAGQAAAAAAAAAAAAAAIQAAAJMAAACLAAAAlAAA
+        AHQAAAAAAAAAbAAAAP8AAAD4AAAA/gAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD9AAAA/AAAAP4AAAD/AAAA/wAAAP8AAAD+AAAA/wAAAN0AAAAMAAAAAAAAAAAAAAA7AAAA/wAA
+        APsAAAD/AAAA0QAAAAAAAABeAAAA/wAAAPwAAAD+AAAA+wAAAPsAAAD9AAAA/gAAAP0AAAD6AAAA9gAA
+        AP8AAACaAAAABQAAAMUAAAD/AAAANQAAAB0AAAAjAAAAHwAAAB8AAAAkAAAAEwAAAAAAAAABAAAAAAAA
+        ADoAAAD/AAAA+AAAAP0AAADzAAAAJQAAAAAAAABPAAAAwgAAAPwAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD7AAAA/wAAAJEAAAAAAAAAgQAAAMMAAAAEAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAABAAAAAAAA
+        AAAAAAAAAAAAOwAAAP8AAAD9AAAA/QAAAP8AAADSAAAAOQAAAAAAAAAAAAAAHgAAAGoAAACmAAAAzgAA
+        AOQAAADvAAAA7gAAAOAAAADUAAAAXwAAAAAAAAADAAAAAQAAAAAAAAA6AAAAwgAAAN0AAADXAAAA1wAA
+        AOAAAAAxAAAAAAAAAAAAAAA6AAAA/wAAAP0AAAD/AAAA/gAAAP4AAAD/AAAAxwAAAGMAAAASAAAAAAAA
+        AAAAAAACAAAABgAAAAYAAAAFAAAABAAAAAEAAAABAAAAAAAAABcAAABeAAAAvwAAAP4AAAD/AAAA/wAA
+        AP8AAAD9AAAA/wAAADsAAAAAAAAAAAAAADsAAAD/AAAA+gAAAPsAAAD+AAAA/QAAAP0AAAD/AAAA/gAA
+        AP8AAACqAAAABQAAAAAAAAAJAAAALQAAAC0AAAAJAAAAAAAAAAQAAACjAAAA/QAAAP4AAAD/AAAA/QAA
+        APwAAAD8AAAA+QAAAPgAAAD/AAAAOwAAAAAAAAAAAAAAGgAAANgAAAD/AAAA/gAAAP8AAAD9AAAA+wAA
+        APcAAAD5AAAA9gAAADkAAAAAAAAAYgAAAOYAAAD/AAAA/wAAAOYAAABjAAAAAAAAAD0AAAD4AAAA+QAA
+        APcAAAD7AAAA/QAAAP8AAAD+AAAA/wAAAOAAAAAdAAAAAAAAAAEAAAAAAAAABwAAAFQAAACyAAAA7gAA
+        AP8AAAD/AAAA+wAAAP8AAACLAAAAAAAAAGkAAAD/AAAA/QAAAP4AAAD+AAAA/QAAAP8AAABpAAAAAAAA
+        AI8AAAD/AAAA+wAAAP8AAAD/AAAA9AAAAL0AAABgAAAACwAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAA
+        AAAAAAAQAAAAPwAAAGEAAABqAAAAeAAAAB8AAAAHAAAA4wAAAP8AAAD7AAAA/wAAAP8AAAD7AAAA/wAA
+        AOMAAAAGAAAAIwAAAIUAAAB3AAAAbgAAAEkAAAAXAAAAAAAAAAAAAAABAAAAAQAAAAAAAAAAAAAAAAAA
+        AAEAAAAEAAAAAwAAAAAAAAAAAAAAAgAAAEEAAABfAAAAAAAAADUAAAD/AAAA/QAAAP8AAAD/AAAA/wAA
+        AP8AAAD9AAAA/wAAADUAAAAAAAAAUgAAADAAAAAAAAAAAAAAAAAAAAACAAAABAAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAACAAAAAAAAAC8AAADdAAAA/wAAAPYAAAAQAAAALwAAAP8AAAD9AAAA/wAA
+        AP8AAAD/AAAA/wAAAP0AAAD/AAAAMAAAAAwAAADzAAAA/wAAAMsAAAAgAAAAAAAAAAIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAMAAAA2AAAAP8AAAD5AAAA/wAAAD0AAAAAAAAA4QAA
+        AP8AAAD7AAAA/wAAAP8AAAD7AAAA/wAAAOEAAAAAAAAAOAAAAP8AAAD5AAAA/wAAAMcAAAACAAAAAAAA
+        AAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAFsAAAD/AAAA+gAAAPwAAAD/AAAAnQAA
+        AAAAAABiAAAA/wAAAP4AAAD/AAAA/wAAAP4AAAD/AAAAYgAAAAAAAACWAAAA/wAAAPsAAAD6AAAA/wAA
+        AEkAAAAAAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAgwAAAP8AAAD7AAAA/gAA
+        AP8AAAD9AAAARAAAAAAAAABWAAAA2gAAAP0AAAD9AAAA2wAAAFYAAAAAAAAAPQAAAPsAAAD/AAAA/gAA
+        APsAAAD/AAAAcgAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAABtAAAA/wAA
+        APoAAAD/AAAA/gAAAP8AAADtAAAARQAAAAAAAAAHAAAAJwAAACcAAAAHAAAAAAAAAD0AAADoAAAA/wAA
+        AP4AAAD/AAAA+gAAAP8AAABeAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAAAA
+        ACAAAADyAAAA/wAAAPoAAAD8AAAA+QAAAP0AAAD5AAAAKwAAAAAAAAACAAAAAgAAAAAAAAApAAAA9wAA
+        AP4AAAD5AAAA/AAAAPoAAAD/AAAA6gAAABcAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAACAAAAAAAAAF0AAAD/AAAA/wAAAP4AAAD+AAAA/wAAAHwAAAAAAAAAAgAAAAIAAAACAAAAAgAA
+        AAAAAAB+AAAA/wAAAP4AAAD+AAAA/wAAAPsAAABSAAAAAAAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAACAAAAAAAAADEAAACaAAAAvAAAAKQAAABCAAAAAAAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAQAAAAAAAABCAAAAowAAALoAAACVAAAAKwAAAAAAAAACAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAABAAAAAMAAAAEAAAAAwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwAAAAQAAAADAAAABAAAAAIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/+l/6f//////6AAB/+gAAf/ogBH/6J+R+giAEf/ogFH6AIBR+gCJEYIA
+        iJHqAAABggAAAYIAAAKBAAipgMAJAYAQCAGABCABgAgQAUAQCAKIAAARQiAEotQAACvoEAgX6BAIF+gI
+        EBfoBCAX6AJAF+QEICfqCBBX5KJNL/IFoE8=
+</value>
+  </data>
 </root>
